# SOFA_Tutorial

./: CMakeLists.txt  GOLD.txt  README.md  degree_to_radian.txt  helper.hpp  iauAf2a.cpp  iauAtic13_cirs_to_icrs.txt  iauCal2jd_gregorian_to_julian.cpp  iauIcrs2g_ICRS_to_Galactic.txt  main.cpp  temp.txt
Coordinate_Conversions/: iauHd2ae_Equatorial_to_Horizon.txt
